--- a/app/pom.xml
+++ b/app/pom.xml
@@ -20,7 +20,11 @@
         </sonar.coverage.exclusions>
     </properties>
     <dependencies>
-
+        <dependency>
+            <groupId>com.project</groupId>
+            <artifactId>config</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -108,7 +112,25 @@
                     </image>
                 </configuration>
             </plugin>
-
+            <plugin>
+                <groupId>org.springframework.experimental</groupId>
+                <artifactId>spring-aot-maven-plugin</artifactId>
+                <version>${spring-native.version}</version>
+                <executions>
+                    <execution>
+                        <id>test-generate</id>
+                        <goals>
+                            <goal>test-generate</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>generate</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
