--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,3 +26,7 @@ jobs:
         run: mvn -B install --file pom.xml -DskipTests
       - name: Build Docker Image
         run: mvn spring-boot:build-image -DskipTests -f app -am
+      - name: Login to DockerHub Registry
+        run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+      - name: Push the latest Docker image
+        run: docker push docker.io/${{secrets.DOCKERHUB_USERNAME}}/app:${GITHUB_SHA::7}
