--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Compile
         run: mvn -B install -pl app -am -DskipTests
       - name: Build Docker Image
-        run: mvn spring-boot:build-image -DskipTests -pl app -am
+        run: mvn spring-boot:build-image -DskipTests --file app/pom.xml
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
       - name: Push the latest Docker image
