Revert "update compression to gzexe"
This reverts commit 9b5bd1704113ab53412403468d57375d8b4e6d9b.

--- a/app/pom.xml
+++ b/app/pom.xml
@@ -97,7 +97,7 @@
                             <BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
                             <BPE_DELIM_JAVA_TOOL_OPTIONS xml:space="preserve"> </BPE_DELIM_JAVA_TOOL_OPTIONS>
                             <BPE_APPEND_JAVA_TOOL_OPTIONS>-Djava.security.egd=file:/dev/./urandom</BPE_APPEND_JAVA_TOOL_OPTIONS>
-                            <BP_BINARY_COMPRESSION_METHOD>gzexe</BP_BINARY_COMPRESSION_METHOD>
+                            <BP_BINARY_COMPRESSION_METHOD>upx</BP_BINARY_COMPRESSION_METHOD>
                         </env>
                         <buildCache>
                             <volume>
